--- a/ultralytics/cfg/models/rt-detr/rtdetr-l_m.yaml
+++ b/ultralytics/cfg/models/rt-detr/rtdetr-l_m.yaml
@@ -40,30 +40,32 @@ backbone:
   - [-1, 6, HGBlock, [384, 2048, 5, True, False]]  # 19 stage 4
 
   # fusion
-  
+  - [[3, 13], 1, Add, [512]]  # 20
+  - [[7, 17], 1, Add, [1024]] # 21
+  - [[9, 19], 1, Add, [2048]] # 22
 
 head:
-  - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 20 input_proj.2
-  - [-1, 1, AIFI, [1024, 8]]
-  - [-1, 1, Conv, [256, 1, 1]]   # 12, Y5, lateral_convs.0
+  - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 23 input_proj.2
+  - [-1, 1, AIFI, [1024, 8]]  # 24
+  - [-1, 1, Conv, [256, 1, 1]]   # 25, Y5, lateral_convs.0
 
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [7, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 14 input_proj.1
-  - [[-2, -1], 1, Concat, [1]]
-  - [-1, 3, RepC3, [256]]  # 16, fpn_blocks.0
-  - [-1, 1, Conv, [256, 1, 1]]   # 17, Y4, lateral_convs.1
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 26
+  - [21, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 27 input_proj.1
+  - [[-2, -1], 1, Concat, [1]]  # 28
+  - [-1, 3, RepC3, [256]]  # 29, fpn_blocks.0
+  - [-1, 1, Conv, [256, 1, 1]]   # 30, Y4, lateral_convs.1
 
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [3, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 19 input_proj.0
-  - [[-2, -1], 1, Concat, [1]]  # cat backbone P4
-  - [-1, 3, RepC3, [256]]    # X3 (21), fpn_blocks.1
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 31
+  - [20, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 32 input_proj.0
+  - [[-2, -1], 1, Concat, [1]]  # 33 cat backbone P4
+  - [-1, 3, RepC3, [256]]    # 34 X3 (21), fpn_blocks.1
 
-  - [-1, 1, Conv, [256, 3, 2]]   # 22, downsample_convs.0
-  - [[-1, 27], 1, Concat, [1]]  # cat Y4
-  - [-1, 3, RepC3, [256]]    # F4 (24), pan_blocks.0
+  - [-1, 1, Conv, [256, 3, 2]]   # 35, downsample_convs.0
+  - [[-1, 30], 1, Concat, [1]]  # 36 cat Y4
+  - [-1, 3, RepC3, [256]]    # F4 (37), pan_blocks.0
 
-  - [-1, 1, Conv, [256, 3, 2]]   # 25, downsample_convs.1
-  - [[-1, 22], 1, Concat, [1]]  # cat Y5
-  - [-1, 3, RepC3, [256]]    # F5 (27), pan_blocks.1
+  - [-1, 1, Conv, [256, 3, 2]]   # 38, downsample_convs.1
+  - [[-1, 25], 1, Concat, [1]]  # 39 cat Y5
+  - [-1, 3, RepC3, [256]]    # F5 (40), pan_blocks.1
 
-  - [[31, 34, 37], 1, RTDETRDecoder, [nc]]  # Detect(P3, P4, P5)
+  - [[34, 37, 40], 1, RTDETRDecoder, [nc]]  # 41 Detect(P3, P4, P5)
