--- a/ultralytics/cfg/models/rt-detr/rtdetr-l_m_add.yaml
+++ b/ultralytics/cfg/models/rt-detr/rtdetr-l_m_add.yaml
@@ -2,7 +2,7 @@
 # RT-DETR-l object detection model with P3-P5 outputs. For details see https://docs.ultralytics.com/models/rtdetr
 
 # Parameters
-nc: 3  # number of classes  FLIR-3
+nc: 8  # number of classes  FLIR-3, VEDAI-8
 scales: # model compound scaling constants, i.e. 'model=yolov8n-cls.yaml' will call yolov8-cls.yaml with scale 'n'
   # [depth, width, max_channels]
   l: [1.00, 1.00, 1024]
@@ -40,9 +40,9 @@ backbone:
   - [-1, 6, HGBlock, [384, 2048, 5, True, False]]  # 19 stage 4
 
   # fusion
-  - [[3, 13], 1, Add, [512]]  # 20
-  - [[7, 17], 1, Add, [1024]] # 21
-  - [[9, 19], 1, Add, [2048]] # 22
+  - [[3, 13], 1, Add, [512]]  # 20 stage 2
+  - [[7, 17], 1, Add, [1024]] # 21 stage 3
+  - [[9, 19], 1, Add, [2048]] # 22 stage 4
 
 head:
   - [-1, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 23 input_proj.2
@@ -58,14 +58,14 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 31
   - [20, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 32 input_proj.0
   - [[-2, -1], 1, Concat, [1]]  # 33 cat backbone P4
-  - [-1, 3, RepC3, [256]]    # 34 X3 (21), fpn_blocks.1
+  - [-1, 3, RepC3, [256]]    # 34 X3 (21), fpn_blocks.1 bs*256*80*80
 
   - [-1, 1, Conv, [256, 3, 2]]   # 35, downsample_convs.0
   - [[-1, 30], 1, Concat, [1]]  # 36 cat Y4
-  - [-1, 3, RepC3, [256]]    # F4 (37), pan_blocks.0
+  - [-1, 3, RepC3, [256]]    # F4 (37), pan_blocks.0 bs*256*40*40
 
   - [-1, 1, Conv, [256, 3, 2]]   # 38, downsample_convs.1
   - [[-1, 25], 1, Concat, [1]]  # 39 cat Y5
-  - [-1, 3, RepC3, [256]]    # F5 (40), pan_blocks.1
+  - [-1, 3, RepC3, [256]]    # F5 (40), pan_blocks.1 bs*256*20*20
 
-  - [[34, 37, 40], 1, RTDETRDecoder, [nc]]  # 41 Detect(P3, P4, P5)
+  - [[34, 37, 40], 1, RTDETRDecoder_m, [nc]]  # 41 Detect(P3, P4, P5)
