--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -27,6 +27,7 @@ deterministic: False  # (bool) whether to enable deterministic mode
 single_cls: False  # (bool) train multi-class data as single-class
 rect: False  # (bool) rectangular training if mode='train' or rectangular validation if mode='val'
 cos_lr: False  # (bool) use cosine learning rate scheduler
+multisteplr: False  # (bool) use multi step learning rate scheduler
 close_mosaic: 10  # (int) disable mosaic augmentation for final epochs (0 to disable)
 resume: False  # (bool) resume training from last checkpoint
 amp: True  # (bool) Automatic Mixed Precision (AMP) training, choices=[True, False], True runs AMP check
@@ -83,6 +84,8 @@ nms: False  # (bool) CoreML: add NMS
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 lr0: 0.0001  # (float) initial learning rate (i.e. SGD=1E-2, Adam=1E-3)
 lrf: 0.01  # (float) final learning rate (lr0 * lrf)
+lr_mult_list: [0.05, 0.05, 0.05, 0.05]
+lr_mult_blockid: [[1], [2,3], [4,5,6,7], [8,9]]
 momentum: 0.9  # (float) SGD momentum/Adam beta1
 weight_decay: 0.0001  # (float) optimizer weight decay 5e-4
 warmup_epochs: 3.0  # (float) warmup epochs (fractions ok)
