--- a/ultralytics/cfg/models/rt-detr/rtdetr-l_m_none_cat.yaml
+++ b/ultralytics/cfg/models/rt-detr/rtdetr-l_m_none_cat.yaml
@@ -25,7 +25,7 @@ backbone:
   - [-1, 6, HGBlock, [384, 2048, 5, True, False]]  # 9 stage 4 2048
 
   # ir stream
-  - [-10, 1, HGStem, [32, 48]]  # 10-P2/4
+  - [-4, 1, HGStem, [32, 48]]  # 10-P2/4
   - [-1, 6, HGBlock, [48, 128, 3]]  # 11 stage 1
 
   - [-1, 1, DWConv, [128, 3, 2, 1, False]]  # 12-P3/8
@@ -52,20 +52,20 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 26
   - [21, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 27 input_proj.1
   - [[-2, -1], 1, Concat, [1]]  # 28
-  - [-1, 3, RepC3, [256]]  # 29, fpn_blocks.0
+  - [-1, 3, RepC3, [256, 3, 1.0, 'gelu']]  # 29, fpn_blocks.0
   - [-1, 1, Conv, [256, 1, 1]]   # 30, Y4, lateral_convs.1
 
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 31
   - [20, 1, Conv, [256, 1, 1, None, 1, 1, False]]  # 32 input_proj.0
   - [[-2, -1], 1, Concat, [1]]  # 33 cat backbone P4
-  - [-1, 3, RepC3, [256]]    # 34 X3 (21), fpn_blocks.1 bs*256*80*80
+  - [-1, 3, RepC3, [256, 3, 1.0, 'gelu']]    # 34 X3 (21), fpn_blocks.1 bs*256*80*80
 
   - [-1, 1, Conv, [256, 3, 2]]   # 35, downsample_convs.0
   - [[-1, 30], 1, Concat, [1]]  # 36 cat Y4
-  - [-1, 3, RepC3, [256]]    # F4 (37), pan_blocks.0 bs*256*40*40
+  - [-1, 3, RepC3, [256, 3, 1.0, 'gelu']]    # F4 (37), pan_blocks.0 bs*256*40*40
 
   - [-1, 1, Conv, [256, 3, 2]]   # 38, downsample_convs.1
   - [[-1, 25], 1, Concat, [1]]  # 39 cat Y5
-  - [-1, 3, RepC3, [256]]    # F5 (40), pan_blocks.1 bs*256*20*20
+  - [-1, 3, RepC3, [256, 3, 1.0, 'gelu']]    # F5 (40), pan_blocks.1 bs*256*20*20
 
   - [[34, 37, 40], 1, RTDETRDecoder_m, [nc]]  # 41 Detect(P3, P4, P5)
