--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -12,6 +12,7 @@ patience: 50  # (int) epochs to wait for no observable improvement for early sto
 batch: 8  # (int) number of images per batch (-1 for AutoBatch)
 imgsz_train: 640  # (int | list) input images size as int for train and val modes, or list[w,h] for predict and export modes
 imgsz_val: 640
+imgsz: 640
 save: True  # (bool) save train checkpoints and predict results
 save_period: -1 # (int) Save checkpoint every x epochs (disabled if < 1)
 cache: False  # (bool) True/ram, disk or False. Use cache for data loading
