--- a/ultralytics/cfg/models/goldyolo_gdneck/yolov8_m_gd_fpnpan.yaml
+++ b/ultralytics/cfg/models/goldyolo_gdneck/yolov8_m_gd_fpnpan.yaml
@@ -33,28 +33,40 @@ backbone:
   - [-1, 3, C2f, [1024, True]]  # 8
   - [-1, 1, SPPF, [1024, 5]]  # 9
 
+  - [-4, 1, Conv, [64, 3, 2]]  # 10-P1/2
+  - [-1, 1, Conv, [128, 3, 2]]  # 11-P2/4
+  - [-1, 3, C2f, [128, True]] # 12
+  - [-1, 1, Conv, [256, 3, 2]]  # 13-P3/8
+  - [-1, 6, C2f, [256, True]] # 14
+  - [-1, 1, Conv, [512, 3, 2]]  # 15-P4/16
+  - [-1, 6, C2f, [512, True]] # 16
+  - [-1, 1, Conv, [1024, 3, 2]]  # 17-P5/32
+  - [-1, 3, C2f, [1024, True]]  # 18
+  - [-1, 1, SPPF, [1024, 5]]  # 19
 
-  - [4, 1, ASA, [256]] # 10-P3 
-  - [6, 1, ASA, [512]] # 11-P4
-  - [9, 1, ASA, [1024]] # 12-P5 
+
+  - [[12, 14, 16, 19, 4, 6, 9], 1, GD_Multimodal, [None]]  # 20 Neck
+  - [20, 1, DevideOutputs_gd, [0]] # 21 P3
+  - [20, 1, DevideOutputs_gd, [1]] # 22 N4
+  - [20, 1, DevideOutputs_gd, [2]] # 23 N5
 
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 13
-  - [[-1, 11], 1, Concat, [1]]  # 14 cat backbone P4
-  - [-1, 3, C2f, [512]]  # 15
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 24
+  - [[-1, 22], 1, Concat, [1]]  # 25 cat backbone N4
+  - [-1, 3, C2f, [512]]  # 26
 
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 16
-  - [[-1, 10], 1, Concat, [1]]  # 17 cat backbone P3
-  - [-1, 3, C2f, [256]]  # 18 (P3/8-small)
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 27
+  - [[-1, 21], 1, Concat, [1]]  # 28 cat backbone P3
+  - [-1, 3, C2f, [256]]  # 29 (P3/8-small)
 
-  # - [-1, 1, Conv, [256, 3, 2]]  # 19
-  # - [[-1, 15], 1, Concat, [1]]  # 20 cat head P4
-  # - [-1, 3, C2f, [512]]  # 21 (P4/16-medium)
+  - [-1, 1, Conv, [256, 3, 2]]  # 30
+  - [[-1, 26], 1, Concat, [1]]  # 31 cat head N4
+  - [-1, 3, C2f, [512]]  # 32 (N4/16-medium)
 
-  # - [-1, 1, Conv, [512, 3, 2]]  # 22
-  # - [[-1, 12], 1, Concat, [1]]  # 23 cat head P5
-  # - [-1, 3, C2f, [1024]]  # 24 (P5/32-large)
+  - [-1, 1, Conv, [512, 3, 2]]  # 33
+  - [[-1, 23], 1, Concat, [1]]  # 34 cat head P5
+  - [-1, 3, C2f, [1024]]  # 35 (N5/32-large)
 
-  # - [[18, 21, 24], 1, Detect, [nc]]  # Detect(P3, P4, P5)
-  - [[18], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  # - [[15, 18, 21], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[29, 32, 35], 1, Detect, [nc]]  # 36 Detect(P3, N4, N5)
