--- a/ultralytics/cfg/models/v8/yolov8_m_add.yaml
+++ b/ultralytics/cfg/models/v8/yolov8_m_add.yaml
@@ -40,22 +40,38 @@ backbone:
   - [-1, 3, C2f, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]]  # 9
 
+  - [-4, 1, Conv, [64, 3, 2]]  # 10-P1/2
+  - [-1, 1, Conv, [128, 3, 2]]  # 11-P2/4
+  - [-1, 3, C2f, [128, True]]
+  - [-1, 1, Conv, [256, 3, 2]]  # 13-P3/8
+  - [-1, 6, C2f, [256, True]]
+  - [-1, 1, Conv, [512, 3, 2]]  # 15-P4/16
+  - [-1, 6, C2f, [512, True]]
+  - [-1, 1, Conv, [1024, 3, 2]]  # 17-P5/32
+  - [-1, 3, C2f, [1024, True]]
+  - [-1, 1, SPPF, [1024, 5]]  # 19
+
+  - [[4, 14], 1, Add, [256]]  # 20
+  - [[6, 16], 1, Add, [512]]  # 21
+  - [[9, 19], 1, Add, [1024]]  # 22
+
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 6], 1, Concat, [1]]  # cat backbone P4
-  - [-1, 3, C2f, [512]]  # 12
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 23
+  - [[-1, 21], 1, Concat, [1]]  # 24 cat backbone P4
+  - [-1, 3, C2f, [512]]  # 25
 
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 4], 1, Concat, [1]]  # cat backbone P3
-  - [-1, 3, C2f, [256]]  # 15 (P3/8-small)
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 26
+  - [[-1, 20], 1, Concat, [1]]  # 27 cat backbone P3
+  - [-1, 3, C2f, [256]]  # 28 (P3/8-small)
 
-  - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 18 (P4/16-medium)
+  - [-1, 1, Conv, [256, 3, 2]]  # 29
+  - [[-1, 25], 1, Concat, [1]]  # 30 cat head P4
+  - [-1, 3, C2f, [512]]  # 31 (P4/16-medium)
 
-  - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 9], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
+  - [-1, 1, Conv, [512, 3, 2]]  # 32
+  - [[-1, 22], 1, Concat, [1]]  # 33 cat head P5
+  - [-1, 3, C2f, [1024]]  # 34 (P5/32-large)
 
-  - [[15, 18, 21], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[28, 31, 34], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  # - [[15], 1, Detect, [nc]]  # Detect(P3, P4, P5)
