--- a/ultralytics/cfg/models/v8/yolov8_sar.yaml
+++ b/ultralytics/cfg/models/v8/yolov8_sar.yaml
@@ -33,12 +33,15 @@ backbone:
   - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
   - [-1, 3, C2f, [128, True]]
   - [-1, 1, Conv, [256, 3, 2]]  # 3-P3/8
-  - [-1, 6, C2f, [256, True]]
+  - [-1, 6, C2f, [256, True]] # 4
   - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
-  - [-1, 6, C2f, [512, True]]
-  - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
-  - [-1, 3, C2f, [1024, True]]
-  - [-1, 1, SPPF, [1024, 5]]  # 9
+  - [-1, 6, C2f, [512, True]] # 6
+  # - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
+  # - [-1, 3, C2f, [1024, True]]
+  # - [-1, 1, SPPF, [1024, 5]]  # 9
+
+  # - [4, 1, DCNv2, [256]] # 7 P3/8
+  # - [6, 1, DCNv2, [512]] # 8 P4/16
 
 # YOLOv8.0n head
 head:
@@ -59,3 +62,17 @@ head:
   - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
 
   - [[15, 18, 21], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+
+
+
+  # - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 9
+  # - [[-1, 7], 1, Concat, [1]]  # 10 cat backbone P3
+  # - [-1, 3, C2f, [256]]  # 11 (P3/8-small)
+  # - [-1, 1, GAMAttention, [256]]  # 12 (P3/8-small)
+
+  # - [-1, 1, Conv, [256, 3, 2]]  # 13
+  # - [[-1, 8], 1, Concat, [1]]  # 14 cat head P4
+  # - [-1, 3, C2f, [512]]  # 15 (P4/16-medium)
+  # - [-1, 1, GAMAttention, [512]]  # 16 (P4/16-medium)
+
+  # - [[12, 16], 1, Detect, [nc]]  # Detect(P3, P4, P5)
