--- a/ultralytics/cfg/models/mlsdnet/yolov8_dp.yaml
+++ b/ultralytics/cfg/models/mlsdnet/yolov8_dp.yaml
@@ -48,13 +48,13 @@ head:
   - [[-1, 10], 1, Concat, [1]]  # 17 cat backbone P3
   - [-1, 3, C2f, [256]]  # 18 (P3/8-small)
 
-  # - [-1, 1, Conv, [256, 3, 2]]  # 19
-  # - [[-1, 15], 1, Concat, [1]]  # 20 cat head P4
-  # - [-1, 3, C2f, [512]]  # 21 (P4/16-medium)
+  - [-1, 1, Conv, [256, 3, 2]]  # 19
+  - [[-1, 15], 1, Concat, [1]]  # 20 cat head P4
+  - [-1, 3, C2f, [512]]  # 21 (P4/16-medium)
 
-  # - [-1, 1, Conv, [512, 3, 2]]  # 22
-  # - [[-1, 12], 1, Concat, [1]]  # 23 cat head P5
-  # - [-1, 3, C2f, [1024]]  # 24 (P5/32-large)
+  - [-1, 1, Conv, [512, 3, 2]]  # 22
+  - [[-1, 12], 1, Concat, [1]]  # 23 cat head P5
+  - [-1, 3, C2f, [1024]]  # 24 (P5/32-large)
 
-  # - [[18, 21, 24], 1, Detect, [nc]]  # Detect(P3, P4, P5)
-  - [[18], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[18, 21, 24], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  # - [[18], 1, Detect, [nc]]  # Detect(P3, P4, P5)
