add crop image ops when val

--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -53,6 +53,9 @@ max_det: 300  # (int) maximum number of detections per image
 half: False  # (bool) use half precision (FP16)
 dnn: False  # (bool) use OpenCV DNN for ONNX inference
 plots: True  # (bool) save plots during train/val
+crop_sub: False
+crop_size: 640
+crop_overlap: 0.25
 
 # Prediction settings --------------------------------------------------------------------------------------------------
 source:  # (str, optional) source directory for images or videos
@@ -107,6 +110,7 @@ hsv_v: 0.4  # (float) image HSV-Value augmentation (fraction)
 degrees: 0.0  # (float) image rotation (+/- deg)
 translate: 0.1  # (float) image translation (+/- fraction)
 scale: 0.5  # (float) image scale (+/- gain)
+multi_scale: []
 shear: 0.0  # (float) image shear (+/- deg)
 perspective: 0.0  # (float) image perspective (+/- fraction), range 0-0.001
 flipud: 0.0  # (float) image flip up-down (probability)
