--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -61,6 +61,8 @@ crop_overlap: 0.25
 source:  # (str, optional) source directory for images or videos
 show: False  # (bool) show results if possible
 save_txt: False  # (bool) save results as .txt file
+save_xml: False
+det_path:
 save_conf: False  # (bool) save results with confidence scores
 save_crop: False  # (bool) save cropped images with results
 show_labels: True  # (bool) show object labels in plots
