--- a/ultralytics/cfg/models/final_net/yolov8_coordatt_dp_fpn_det3.yaml
+++ b/ultralytics/cfg/models/final_net/yolov8_coordatt_dp_fpn_det3.yaml
@@ -12,13 +12,6 @@ scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call 
   x: [1.00, 1.25, 512]   # YOLOv8x summary: 365 layers, 68229648 parameters, 68229632 gradients, 258.5 GFLOPs
 
 
-# l1: 2
-# l2: 8
-# c1: 32
-# c2: 256
-# sr: True
-# factor: 2
-
 l1: None
 l2: None
 c1: None
@@ -30,44 +23,43 @@ factor: None
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
-  - [-1, 1, CoordAtt, [64]]  # 1-P1/2
+  - [-1, 1, CoordAtt, [64]]  # 1
 
   - [-1, 1, Conv, [128, 3, 2]]  # 2-P2/4
-  - [-1, 3, C2f, [128, True]]
-  - [-1, 1, CoordAtt, [128]]  # 4-P2/4
+  - [-1, 3, C2f, [128, True]] # 3
+  - [-1, 1, CoordAtt, [128]]  # 4
 
   - [-1, 1, Conv, [256, 3, 2]]  # 5-P3/8
-  - [-1, 6, C2f, [256, True]]
-  - [-1, 1, CoordAtt, [256]]  # 7-P3/8
+  - [-1, 6, C2f, [256, True]] # 6
+  - [-1, 1, CoordAtt, [256]]  # 7
 
   - [-1, 1, Conv, [512, 3, 2]]  # 8-P4/16
-  - [-1, 6, C2f, [512, True]]
-  - [-1, 1, CoordAtt, [512]]  # 10-P4/16
+  - [-1, 6, C2f, [512, True]] # 9
+  - [-1, 1, CoordAtt, [512]]  # 10
 
   - [-1, 1, Conv, [1024, 3, 2]]  # 11-P5/32
-  - [-1, 3, C2f, [1024, True]]
+  - [-1, 3, C2f, [1024, True]]  # 12
   - [-1, 1, SPPF, [1024, 5]]  # 13
-
+  - [-1, 1, DP, [1024]] # 14-P5 
+  
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 10], 1, Concat, [1]]  # cat backbone P4
-  # - [-1, 3, C2f, [512]]  # 16
-  - [-1, 1, Conv, [512]]  # 16
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 15
+  - [[-1, 10], 1, Concat, [1]]  # 16 cat backbone P4
+  - [-1, 3, C2f, [512]]  # 17
+  - [-1, 1, DP, [512]]  # 18
 
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 7], 1, Concat, [1]]  # cat backbone P3
-  # - [-1, 3, C2f, [256]]  # 19 (P3/8-small)
-  - [-1, 1, Conv, [256]]  # 19 (P3/8-small)
+  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]  # 19
+  - [[-1, 7], 1, Concat, [1]]  # 20 cat backbone P3
+  - [-1, 3, C2f, [256]]  # 21 (P3/8-small)
+  - [-1, 1, DP, [256]]  # 22
 
-  - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 16], 1, Concat, [1]]  # cat head P4
-  # - [-1, 3, C2f, [512]]  # 22 (P4/16-medium)
-  - [-1, 1, Conv, [256]]  # 19 (P3/8-small)
+  # - [-1, 1, Conv, [256, 3, 2]]  # 24
+  # - [[-1, 19], 1, Concat, [1]]  # 25 cat head P4
+  # - [-1, 3, C2f, [512]]  # 26 (P4/16-medium)
 
-  - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 13], 1, Concat, [1]]  # cat head P5
-  # - [-1, 3, C2f, [1024]]  # 25 (P5/32-large)
-  - [-1, 1, Conv, [1024]]  # 25 (P5/32-large)
+  # - [-1, 1, Conv, [512, 3, 2]]  # 27
+  # - [[-1, 15], 1, Concat, [1]]  # 28 cat head P5
+  # - [-1, 3, C2f, [1024]]  # 29 (P5/32-large)
 
-  - [[19, 22, 25], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[22], 1, Detect, [nc]]  # Detect(P3, P4, P5)
