--- a/ultralytics/cfg/models/my_net/yolov8_dp_fca_dwt.yaml
+++ b/ultralytics/cfg/models/my_net/yolov8_dp_fca_dwt.yaml
@@ -30,44 +30,33 @@ factor: None
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
-  - [-1, 1, CoordAtt, [64]]  # 1-P1/2
-
-  - [-1, 1, Conv, [128, 3, 2]]  # 2-P2/4
+  - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
   - [-1, 3, C2f, [128, True]]
-  - [-1, 1, CoordAtt, [128]]  # 4-P2/4
-
+  - [-1, 1, MultiSpectral, [128, 56, 56, 16, 'low4']] # 3
+  - [-1, 1, Multi_resolution, [128]]
   - [-1, 1, Conv, [256, 3, 2]]  # 5-P3/8
   - [-1, 6, C2f, [256, True]]
-  - [-1, 1, CoordAtt, [256]]  # 7-P3/8
-
-  - [-1, 1, Conv, [512, 3, 2]]  # 8-P4/16
+  - [-1, 1, MultiSpectral, [256, 28, 28, 16, 'low4']] # 7
+  - [-1, 1, Multi_resolution, [256]]  # 8
+  - [-1, 1, Conv, [512, 3, 2]]  # 9-P4/16
   - [-1, 6, C2f, [512, True]]
-  - [-1, 1, CoordAtt, [512]]  # 10-P4/16
-
-  - [-1, 1, Conv, [1024, 3, 2]]  # 11-P5/32
+  - [-1, 1, MultiSpectral, [512, 14, 14, 16, 'low4']] # 11
+  - [-1, 1, Multi_resolution, [512]]  # 12
+  - [-1, 1, Conv, [1024, 3, 2]]  # 13-P5/32
   - [-1, 3, C2f, [1024, True]]
-  - [-1, 1, SPPF, [1024, 5]]  # 13
+  - [-1, 1, SPPF, [1024, 5]]  # 15
+  - [-1, 1, DP, [1024]] # 16
 
 # YOLOv8.0n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 10], 1, Concat, [1]]  # cat backbone P4
-  # - [-1, 3, C2f, [512]]  # 16
-  - [-1, 1, Conv, [512]]  # 16
+  - [[-1, 12], 1, Concat, [1]]  # cat backbone P4
+  - [-1, 3, C2f, [512]]  # 19
+  - [-1, 1, DP, [512]]  # 20
 
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 7], 1, Concat, [1]]  # cat backbone P3
-  # - [-1, 3, C2f, [256]]  # 19 (P3/8-small)
-  - [-1, 1, Conv, [256]]  # 19 (P3/8-small)
+  - [[-1, 8], 1, Concat, [1]]  # cat backbone P3
+  - [-1, 3, C2f, [256]]  # 23
+  - [-1, 1, DP, [256]]  # 24
 
-  - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 16], 1, Concat, [1]]  # cat head P4
-  # - [-1, 3, C2f, [512]]  # 22 (P4/16-medium)
-  - [-1, 1, Conv, [256]]  # 19 (P3/8-small)
-
-  - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 13], 1, Concat, [1]]  # cat head P5
-  # - [-1, 3, C2f, [1024]]  # 25 (P5/32-large)
-  - [-1, 1, Conv, [1024]]  # 25 (P5/32-large)
-
-  - [[19, 22, 25], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[24, 20, 16], 1, Detect, [nc]]  # Detect(P3, P4, P5)
